--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>fxt</title>
     <style>
-      body{margin: 0
+          body{margin: 0
+            .yuan{  border-radius: 50%;
+      width: 200px;px;
+      height: 200px;px;
+      background: url("./img/iface.png") no-repeat center;
+      background-size:60px;}
     </style>
   </head>
   <body>
     <input type="text" />
     <p>你好，世界！</p>
-    <img src="./img/iface.png" alt="头像" width="500px" height="500px" />
+    <div class="yuan">
+      <img src="./img/iface.png" alt="头像" width="500px" height="500px" />
+    </div>
   </body>
 </html>
