--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 
     <title>fxt</title>
     <style>
-          body{margin: 0
-            .yuan{  border-radius: 50%;
-      width: 200px;px;
-      height: 200px;px;
-      background: url("./img/iface.png") no-repeat center;
-      background-size:60px;}
+        body{margin: 0}
+        .yuan{ border-radius: 50%; width: 200px;px; height: 200px;px;
+      background: url("./img/iface.png") no-repeat center; background-size:60px;}
     </style>
   </head>
   <body>
     <input type="text" />
     <p>你好，世界！</p>
     <div class="yuan">
-      <img src="./img/iface.png" alt="头像" width="500px" height="500px" />
+      <img
+        src="./img/iface.png"
+        alt="头像"
+        width="500px"
+        height="500px"
+        class="yuan"
+      />
     </div>
   </body>
 </html>
